translation directive and code modifications

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 
       <a routerLink="">
         <!-- <mat-icon>home</mat-icon> -->
-        <span>ختمة.نت</span>
+        <span [translate]="'app.title'">ختمة.نت</span>
       </a>
 
       <span class="spacer"></span>
@@ -39,4 +39,5 @@
 
 
   </div>
+
 </div>
