--- a/src/app/pages/create-group/group-invite/group-invite.component.html
+++ b/src/app/pages/create-group/group-invite/group-invite.component.html
@@ -3,14 +3,14 @@
     <app-khitma-info [group]="group" [showLink]="flase" [isExpanded]="false"></app-khitma-info>
 
 
-    <p>
+    <p [translate]="'gInvite.done'">
         تمّ إنشاء مجموعة الختمة بنجاح. يمكنك الآن مشاركة رسالة الدعوة مع معارفك وأصدقائك، أو الانتقال إلى صفحة المجموعة
         ومشاركة الرسالة من هناك.
     </p>
 
 
     <mat-form-field appearance="fill" class="block">
-        <mat-label>رسالة الدعوة للإنضمام (يمكنك تعديلها)</mat-label>
+        <mat-label [translate]="'gInvite.message'">رسالة الدعوة للإنضمام (يمكنك تعديلها)</mat-label>
         <textarea matInput rows="4" [(ngModel)]="inviteMsg" name="invite-msg"></textarea>
     </mat-form-field>
 
@@ -26,13 +26,14 @@
 
     <button class=" copy-msg-btn large" mat-raised-button (click)="share()">
 
-        <mat-icon>share</mat-icon> مشاركة
+        <mat-icon>share</mat-icon> <span [translate]="'share'">مشاركة</span>
 
     </button>
 
 
 
-    <a mat-raised-button color="accent" class="block  large action-btn" [routerLink]="['/group',group.id]">الانتقال
+    <a mat-raised-button color="accent" class="block  large action-btn" [routerLink]="['/group',group.id]"
+        [translate]="'gInvite.go'">الانتقال
         لصفحة
         مجموعة الختمة</a>
 
