--- a/src/app/shared/celebration/celebration.component.html
+++ b/src/app/shared/celebration/celebration.component.html
@@ -47,45 +47,45 @@
 
 <div class="confetti">
     <div class="confetti-piece">
-        <label>ما شاء الله عنّك</label>
+        <label [translate]="'celebration.a'">ما شاء الله عنّك</label>
     </div>
     <div class="confetti-piece">
-        <label>بارك الله بك</label>
+        <label [translate]="'celebration.b'">بارك الله بك</label>
     </div>
     <div class="confetti-piece">
-        <label>جزاك الله خيرا</label>
+        <label [translate]="'celebration.c'">جزاك الله خيرا</label>
     </div>
     <div class="confetti-piece">
-        <label>أسعدك الله</label>
+        <label [translate]="'celebration.d'">أسعدك الله</label>
     </div>
     <div class="confetti-piece">
-        <label>في ميزان حسناتك</label>
+        <label [translate]="'celebration.e'">في ميزان حسناتك</label>
     </div>
     <div class="confetti-piece">
-        <label>رضي الله عنك</label>
+        <label [translate]="'celebration.f'">رضي الله عنك</label>
     </div>
     <div class="confetti-piece">
-        <label>تقبّل الله</label>
+        <label [translate]="'celebration.g'">تقبّل الله</label>
     </div>
     <div class="confetti-piece">
-        <label>ما شاء الله عنّك</label>
+        <label [translate]="'celebration.h'">ما شاء الله عنّك</label>
     </div>
     <div class="confetti-piece">
-        <label>بارك الله بك</label>
+        <label [translate]="'celebration.i'">بارك الله بك</label>
     </div>
     <div class="confetti-piece">
-        <label>جزاك الله خيرا</label>
+        <label [translate]="'celebration.j'">جزاك الله خيرا</label>
     </div>
     <div class="confetti-piece">
-        <label>أسعدك الله</label>
+        <label [translate]="'celebration.k'">أسعدك الله</label>
     </div>
     <div class="confetti-piece">
-        <label>في ميزان حسناتك</label>
+        <label [translate]="'celebration.l'">في ميزان حسناتك</label>
     </div>
     <div class="confetti-piece">
-        <label>رضي الله عنك</label>
+        <label [translate]="'celebration.m'">رضي الله عنك</label>
     </div>
     <div class="confetti-piece">
-        <label>تقبّل الله</label>
+        <label [translate]="'celebration.n'">تقبّل الله</label>
     </div>
 </div>
