--- a/src/app/shared/group-list/group-list.component.html
+++ b/src/app/shared/group-list/group-list.component.html
@@ -2,7 +2,7 @@
 
     <header class="center-center">
 
-        <header>مجموعاتي الحاليّة</header>
+        <header [translate]="'me.groups'">مجموعاتي الحاليّة</header>
 
         <span class="spacer"></span>
 
