--- a/src/app/shared/group-members/group-members.component.html
+++ b/src/app/shared/group-members/group-members.component.html
@@ -9,7 +9,7 @@
             <div style="width: 80%;">
 
                 <mat-form-field class="block">
-                    <mat-label>اسم العضو الجديد</mat-label>
+                    <mat-label><span [translate]="'groups.member'">اسم العضو الجديد</span></mat-label>
                     <input matInput [(ngModel)]="newMemberName" name="newMemberName" required="true" autocomplete="off">
                 </mat-form-field>
             </div>
