--- a/src/app/shared/juz-list/juz-list.component.html
+++ b/src/app/shared/juz-list/juz-list.component.html
@@ -1,10 +1,10 @@
 <section>
 
     <span *ngIf="allowEdit" class="center-center tip">
-        <strong>لمسؤول المجموعة:</strong>
+        <strong [translate]="'juz.responsible'">لمسؤول المجموعة:</strong>
+        <span [translate]="'juz.intro'">يمكنك تعديل الأسماء بالضغط عليها وكتابة اسم
+            عضو حالي آخر أو اسم عضو جديد ثمّ الضغط على كبسة الحفظ التي تظهر بعد التغيير.</span>
 
-        يمكنك تعديل الأسماء بالضغط عليها وكتابة اسم
-        عضو حالي آخر أو اسم عضو جديد ثمّ الضغط على كبسة الحفظ التي تظهر بعد التغيير.
     </span>
 
 
