--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -2,7 +2,7 @@
     <label style="display:block;text-align: center;">﷽</label>
 
     <img class="logo" src="assets/khitma-logo.png" alt="logo of khitmah" />
-    <p>
+    <p [translate]="'about.intro'">
         ختمة.نت هو تطبيق انطلق من رحاب المسجد الأقصى المبارك ليتيح قراءة وختم القرآن الكريم بشكل جماعي، وذلك عن طريق
         إنشاء مجموعات لختم القرآن وتوزيع أجزاء
         المصحف على الأعضاء بطريقة سلسلة، ثمّ متابعة تقدّم الختمة بشكل مريح ومتاح لجميع المشتركين في مجموعتك.
@@ -10,9 +10,9 @@
     </p>
 
     <section>
-        <header style="margin-top: 64px;">شرح الاستخدام</header>
+        <header [translate]="'about.title'" style="margin-top: 64px;">شرح الاستخدام</header>
 
-        <p>في الفيديو التالي شرح وافٍ لكيفيّة استخدام ختمة.نت.</p>
+        <p [translate]="'about.video'">في الفيديو التالي شرح وافٍ لكيفيّة استخدام ختمة.نت.</p>
 
 
         <iframe width="100%" height="315" src="https://www.youtube.com/embed/MXh10UDyaA0" frameborder="0"
@@ -24,9 +24,9 @@
             href="https://www.youtube.com/watch?v=MXh10UDyaA0&ab_channel=DigitalUmmah" target="_blank">
 
             <mat-icon>play_circle_filled</mat-icon>
+            <span [translate]="'about.youtube'">فيديو الشرح على
+                يوتيوب</span>
 
-            فيديو الشرح على
-            يوتيوب
         </a>
 
 
@@ -49,7 +49,7 @@
 
 
 
-        <p> تقبل الله طاعاتكم ودمتم بحفظ الله تعالى ورعايته. </p>
+        <p [translate]="'about.bless'"> تقبل الله طاعاتكم ودمتم بحفظ الله تعالى ورعايته. </p>
 
     </section>
 
@@ -57,8 +57,8 @@
 
 
     <ul class="links">
-        <li><a href="/assets/privacy_policy.html" target="_blank">اتفاقيّة الخصوصيّة</a></li>
-        <li><a href="/assets/terms_of_use.html" target="_blank">شروط الاستخدام</a></li>
+        <li><a href="/assets/privacy_policy.html" target="_blank" [translate]="'privacy'">اتفاقيّة الخصوصيّة</a></li>
+        <li><a href="/assets/terms_of_use.html" target="_blank" [translate]="'terms'">شروط الاستخدام</a></li>
 
     </ul>
 
