--- a/src/app/pages/me/personal-khitma/personal-khitma.component.html
+++ b/src/app/pages/me/personal-khitma/personal-khitma.component.html
@@ -1,12 +1,13 @@
 <section>
 
-    <header>
+    <header [translate]="'me.header'">
 
         ختمتي الشخصيّة
     </header>
 
 
-    <p>يمكنك التبديل بين الحالات المختلفة للجزء عن طريق الضغط عليه. كذلك عند حجزك أو إتمام قراءتك لجزء في إحدى المجموعات
+    <p [translate]="'me.intro'">يمكنك التبديل بين الحالات المختلفة للجزء عن طريق الضغط عليه. كذلك عند حجزك أو إتمام
+        قراءتك لجزء في إحدى المجموعات
         فإنّ حالة ذلك الجزء ستتعدّل بشكل تلقائي هنا في ختمتك الشخصيّة</p>
 
     <app-juz-grid class="app-juz-grid" [ajza]="ajza" (onJuzSelection)="juzSelected($event)">
