--- a/src/app/shared/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/confirm-dialog/confirm-dialog.component.html
@@ -7,6 +7,7 @@
 </div>
 
 <div mat-dialog-actions>
-    <button mat-button (click)="onDismiss()">لا</button>
-    <button mat-raised-button color="primary" class="app-btn-primary" (click)="onConfirm()">نعم</button>
+    <button mat-button (click)="onDismiss()"><span [translate]="'dialog.no'">لا</span></button>
+    <button mat-raised-button color="primary" class="app-btn-primary" (click)="onConfirm()"><span
+            [translate]="'dialog.yes'">نعم</span></button>
 </div>
